# kaitaiStructCompile.schemas

./: .gitignore  .gitlab-ci.yml  ReadMe.md  setup.cfg
kaitaiStructCompile/schemas/: __init__.py  validators.py
kaitaiStructCompile/schemas/schemas/: config.schema.json
