[metadata]
name = kaitaiStructCompile.schemas
author = KOLANICH
url = schemas
description = the package to validate different JSONSchemas related to kaitaiStructCompile
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = KaitaiStruct, compiler, binary format, JSONSchema
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
packages = kaitaiStructCompile.schemas
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.test
install_requires = 
	jsonschema @ git+https://github.com/Julian/jsonschema.git
